fixed issue with overflow

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header{
 .container{
     background-color:rgb(255, 255, 255) ;
     width: 60vh;
-    height:80vh;
+    min-height:80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
